// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Alert Correct generation of default params values 1`] = `
Object {
  "heightAuto": false,
  "icon": "error",
  "text": "An error has occurred",
  "title": "Ups",
}
`;

exports[`Success Alert Correct generation of default params values 1`] = `
Object {
  "heightAuto": false,
  "icon": "success",
  "text": "Successful Operation",
  "timer": 2000,
  "title": "Done!",
}
`;

exports[`Verification Alert Correct generation of custom params values 1`] = `
Object {
  "cancelButtonColor": "#3f51b5",
  "cancelButtonText": "test",
  "confirmButtonColor": "#f44336",
  "confirmButtonText": "test",
  "heightAuto": false,
  "icon": "error",
  "showCancelButton": true,
  "text": "test",
  "title": "test",
}
`;

exports[`Verification Alert Correct generation of default params values 1`] = `
Object {
  "cancelButtonColor": "#3f51b5",
  "cancelButtonText": "No",
  "confirmButtonColor": "#f44336",
  "confirmButtonText": "Yes, I'm sure.",
  "heightAuto": false,
  "icon": "warning",
  "showCancelButton": true,
  "text": "Once you accept this there is no turning back.",
  "title": "Are you sure you want to continue?",
}
`;
